# baremetal_pi4_irq_sample

./: LICENSE  README.md  build.sh
code/: CMakeLists.txt  aarch64-elf-gcc.cmake  armv8_misc.h  bcm2835_interrupt.c  bcm2835_interrupt.h  bcm2836_interrupt.c  bcm2836_interrupt.h  config.txt  gic-400.h  gicv2.h  gpio.c  gpio.h  install.sh  interrupt_handler.c  interrupt_handler.h  ldscript.ld  main.c  my_stdio.c  my_stdio.h  my_string.c  my_string.h  pl011_serial.c  pl011_serial.h  raspi3_peripheral.c  raspi3_peripheral.h  raspi4_peripheral.c  raspi4_peripheral.h  raspi_peripheral.h  start.S  target_config.h  target_config.h.in  vector_table.S
netboot/: .gitignore  README.md  Vagrantfile  setup.sh
netboot/files/: dnsmasq.conf
